--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build-windows:
@@ -19,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build Windows executable
-      run: npm run build:win
+      run: npm run build:win:portable
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
