--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,20 +13,29 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
+    
     - name: Install dependencies
-      run: npm install
-    - name: Build Windows (simple)
-      run: npx electron-builder --win --x64 --dir
+      run: npm ci
+    
+    - name: Build Windows with timeout
+      timeout-minutes: 15
+      run: |
+        echo "=== Building Windows ==="
+        npx electron-builder --win --x64 2>&1 || echo "Build exited with code $?"
+        echo "=== Build finished ==="
+        if exist dist dir dist
+    
     - name: Upload artifact
+      if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: Windows-dir
-        path: dist/win-unpacked
+        name: Windows-build
+        path: dist
         retention-days: 5
         
   build-mac:
@@ -34,18 +43,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
+    
     - name: Install dependencies
-      run: npm install
-    - name: Build macOS DMG
+      run: npm ci
+    
+    - name: Build macOS
+      timeout-minutes: 15
       run: npx electron-builder --mac --x64 --arm64
+    
     - name: Upload artifact
+      if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: macOS-dmg
+        name: macOS-build
         path: dist
         retention-days: 5
